--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@types/node": "^20.17.16",
 		"@types/react": "^19.0.0",
 		"@types/react-dom": "^19.0.0",
+		"eslint": "^9.19.0",
 		"postcss-custom-media": "^10.0.8",
 		"postcss-flexbugs-fixes": "^5.0.2",
 		"typescript": "^5.7.3"
