--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@once-ui-system/magic-portfolio",
+	"name": "squamedia",
 	"version": "1.3.0",
 	"scripts": {
 		"dev": "next dev",
@@ -17,30 +17,30 @@
 		"form-data": "^4.0.1",
 		"gray-matter": "^4.0.3",
 		"mailgun.js": "^11.1.0",
-		"next": "^15.1.1",
 		"next-mdx-remote": "^5.0.0",
 		"node-mailjet": "^6.0.6",
 		"postcss": "^8.5.1",
 		"postcss-preset-env": "^9.6.0",
 		"prismjs": "^1.29.0",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
 		"react-icons": "^5.4.0",
 		"react-masonry-css": "^1.0.16",
 		"remark": "^15.0.1",
 		"remark-html": "^16.0.1",
 		"sass": "^1.83.4",
-		"sharp": "^0.33.5"
+		"sharp": "^0.33.5",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"next": "15.1.6"
 	},
 	"devDependencies": {
 		"@csstools/postcss-global-data": "^2.1.1",
 		"@types/cookie": "^0.6.0",
-		"@types/node": "^20.17.16",
-		"@types/react": "^19.0.0",
-		"@types/react-dom": "^19.0.0",
 		"eslint": "^9.19.0",
 		"postcss-custom-media": "^10.0.8",
 		"postcss-flexbugs-fixes": "^5.0.2",
-		"typescript": "^5.7.3"
+		"typescript": "^5",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19"
 	}
 }
